crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-recording.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;0",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "quality": "4",
        "type": "recording_quality"
      },
      "line_type": "header"
    },
    {
      "header": {
        "layout": "mother and child seated at table, toys on floor",
        "type": "room_layout"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "tape 3, side A, counter 145",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Recording environment headers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: recording_quality_header, recording_quality_option,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "room_layout_header, tape_location_header",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "where",
              "content": [
                {
                  "content": "where",
                  "type": "text"
                }
              ],
              "raw_text": "where",
              "type": "word"
            },
            {
              "cleaned_text": "did",
              "content": [
                {
                  "content": "did",
                  "type": "text"
                }
              ],
              "raw_text": "did",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "ball",
              "content": [
                {
                  "content": "ball",
                  "type": "text"
                }
              ],
              "raw_text": "ball",
              "type": "word"
            },
            {
              "cleaned_text": "go",
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            },
            {
              "cleaned_text": "rolled",
              "content": [
                {
                  "content": "rolled",
                  "type": "text"
                }
              ],
              "raw_text": "rolled",
              "type": "word"
            },
            {
              "cleaned_text": "under",
              "content": [
                {
                  "content": "under",
                  "type": "text"
                }
              ],
              "raw_text": "under",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "table",
              "content": [
                {
                  "content": "table",
                  "type": "text"
                }
              ],
              "raw_text": "table",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;0",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
