crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-speaker-info.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng",
    "ara"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "ara"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Father",
            "speaker_code": "F_A'-T"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.02",
        "corpus": "corpus",
        "group": "normal",
        "language": [
          "eng",
          "ara"
        ],
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng",
          "ara"
        ],
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng",
          "ara"
        ],
        "role": "Father",
        "speaker": "F_A'-T",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "28-JUN-2001",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "15-MAR-1975",
        "participant": "MOT",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "participant": "MOT",
        "place": "Taipei, Taiwan",
        "type": "birthplace"
      },
      "line_type": "header"
    },
    {
      "header": {
        "language": "ara",
        "participant": "F_A'-T",
        "type": "l1_of"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Speaker info headers: @Birth of, @Birthplace of, @L1 of",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: birth_of_header, birthplace_of_header, l1_of_header,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "age_format, multiple @Languages codes, participant with special chars",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "mama",
              "content": [
                {
                  "content": "mama",
                  "type": "text"
                }
              ],
              "raw_text": "mama",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "she",
              "content": [
                {
                  "content": "she",
                  "type": "text"
                }
              ],
              "raw_text": "she",
              "type": "word"
            },
            {
              "cleaned_text": "wants",
              "content": [
                {
                  "content": "wants",
                  "type": "text"
                }
              ],
              "raw_text": "wants",
              "type": "word"
            },
            {
              "cleaned_text": "her",
              "content": [
                {
                  "content": "her",
                  "type": "text"
                }
              ],
              "raw_text": "her",
              "type": "word"
            },
            {
              "cleaned_text": "toy",
              "content": [
                {
                  "content": "toy",
                  "type": "text"
                }
              ],
              "raw_text": "toy",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "F_A'-T"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": "28-JUN-2001",
      "code": "CHI",
      "id": {
        "age": "1;08.02",
        "corpus": "corpus",
        "group": "normal",
        "language": [
          "eng",
          "ara"
        ],
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "F_A'-T": {
      "birth_date": null,
      "code": "F_A'-T",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng",
          "ara"
        ],
        "role": "Father",
        "speaker": "F_A'-T"
      },
      "name": null,
      "role": "Father"
    },
    "MOT": {
      "birth_date": "15-MAR-1975",
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng",
          "ara"
        ],
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
